--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -50,5 +50,16 @@
 			<artifactId>okio</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.12.0</version>
+		</dependency>
 	</dependencies>
 </project>
