--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nlp4j</groupId>
 	<artifactId>nlp4j</artifactId>
-	<version>1.0</version>
+	<version>0.9.20190901</version>
 
 	<name>NLP4J</name>
 
