--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -82,7 +82,7 @@
 							<packages>nlp4j*</packages>
 						</group>
 					</groups>
-
+					<docfilessubdirs>true</docfilessubdirs>
 				</configuration>
 			</plugin>
 		</plugins>
