--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -97,6 +97,9 @@
 			</build>
 		</profile>
 	</profiles>
+	<modules>
+		<module>nlp4j</module>
+	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
