--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nlp4j</groupId>
 	<artifactId>nlp4j</artifactId>
-	<version>1.0.0.0</version>
+	<version>1.0.0.1-SNAPSHOT</version>
 	<!-- JAR -->
 	<packaging>jar</packaging>
 	<name>NLP4J</name>
@@ -208,6 +208,12 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.12.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.8</version>
 		</dependency>
 	</dependencies>
 </project>
