--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nlp4j</groupId>
 	<artifactId>nlp4j</artifactId>
-	<version>1.0.0.1</version>
+	<version>1.1.1.0-SNAPSHOT</version>
 	<!-- JAR -->
 	<packaging>jar</packaging>
 	<name>NLP4J</name>
@@ -214,6 +214,18 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
 			<version>1.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
 		</dependency>
 	</dependencies>
 </project>
