--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -2,15 +2,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!-- PARENT -->
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.1.1.0-SNAPSHOT</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
+	<!-- ARTIFACT ID -->
 	<artifactId>nlp4j-core</artifactId>
 	<!-- JAR -->
 	<packaging>jar</packaging>
-	<name>NLP4J-core</name>
+	<name>nlp4j-core</name>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://www.nlp4j.org/</url>
 	<licenses>
@@ -48,7 +50,7 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 		<repository>
-			<id>sonatype-nexus-staging</id>
+			<id>ossrh</id>
 			<name>Nexus Release Repository</name>
 			<uniqueVersion>false</uniqueVersion>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2
@@ -188,7 +190,6 @@
 			<version>3.8.2</version>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
