--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2.0.0</version>
 	</parent>
 	<!-- ARTIFACT ID -->
 	<artifactId>nlp4j-core</artifactId>
