--- a/nlp4j/nlp4j-cotoha/pom.xml
+++ b/nlp4j/nlp4j-cotoha/pom.xml
@@ -7,25 +7,20 @@
 		<artifactId>nlp4j</artifactId>
 		<version>1.2.1.0</version>
 	</parent>
-	<artifactId>nlp4j-azure</artifactId>
+	<artifactId>nlp4j-cotoha</artifactId>
 	<version>1.0.0.0-SNAPSHOT</version>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/com.azure/azure-search -->
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
-			<groupId>com.azure</groupId>
-			<artifactId>azure-search</artifactId>
-			<version>1.0.0-beta.1</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.2</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
 			<version>1.2.1.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
 		</dependency>
 	</dependencies>
 </project>
