--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -185,5 +185,6 @@
 		<module>nlp4j-deeplearning</module>
 		<module>nlp4j-azure</module>
 		<module>nlp4j-webcrawler</module>
+		<module>nlp4j-cotoha</module>
 	</modules>
 </project>
