--- a/nlp4j/nlp4j-azure/pom.xml
+++ b/nlp4j/nlp4j-azure/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.2.1.0</version>
+		<version>1.3.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>nlp4j-azure</artifactId>
 	<version>1.0.0.0-SNAPSHOT</version>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.2.1.0</version>
+			<version>1.3.0.0-SNAPSHOT</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
