--- a/nlp4j/nlp4j-cotoha/pom.xml
+++ b/nlp4j/nlp4j-cotoha/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.2.1.0</version>
+		<version>1.3.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>nlp4j-cotoha</artifactId>
 	<version>1.0.0.0-SNAPSHOT</version>
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.2.1.0</version>
+			<version>1.3.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
