--- a/nlp4j/nlp4j-deeplearning/pom.xml
+++ b/nlp4j/nlp4j-deeplearning/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.2.1.0</version>
+		<version>1.3.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>nlp4j-deeplearning</artifactId>
 	<version>1.0.0.0</version>
