--- a/nlp4j/nlp4j-kuromoji/pom.xml
+++ b/nlp4j/nlp4j-kuromoji/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.2.1.0</version>
+		<version>1.3.0.0-SNAPSHOT</version>
 	</parent>
 	<!-- ARTIFACT -->
 	<artifactId>nlp4j-kuromoji</artifactId>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.2.1.0</version>
+			<version>1.3.0.0-SNAPSHOT</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.atilika.kuromoji/kuromoji -->
 		<dependency>
