--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -186,5 +186,6 @@
 		<module>nlp4j-azure</module>
 		<module>nlp4j-webcrawler</module>
 		<module>nlp4j-cotoha</module>
+		<module>nlp4j-twitter4j</module>
 	</modules>
 </project>
