--- a/nlp4j/nlp4j-twitter4j/pom.xml
+++ b/nlp4j/nlp4j-twitter4j/pom.xml
@@ -5,10 +5,10 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.3.0.0-SNAPSHOT</version>
+		<version>1.3.0.0</version>
 	</parent>
 	<artifactId>nlp4j-twitter4j</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0.0-SNAPSHOT</version>
 	<properties>
 		<!-- 変数 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.0.0-SNAPSHOT</version>
+			<version>1.3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.twitter4j</groupId>
