--- a/nlp4j/nlp4j-yahoojp/pom.xml
+++ b/nlp4j/nlp4j-yahoojp/pom.xml
@@ -5,15 +5,15 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.3.0.0-SNAPSHOT</version>
+		<version>1.3.0.0</version>
 	</parent>
 	<artifactId>nlp4j-yahoojp</artifactId>
-	<version>1.0.0.0-SNAPSHOT</version>
+	<version>1.3.0.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.0.0-SNAPSHOT</version>
+			<version>1.3.0.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
