--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nlp4j</groupId>
 	<artifactId>nlp4j</artifactId>
-	<version>1.3.0.0-SNAPSHOT</version>
+	<version>1.3.0.0</version>
 	<!-- POM -->
 	<packaging>pom</packaging>
 	<name>NLP4J</name>
