--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -192,5 +192,6 @@
 		<module>nlp4j-cotoha</module>
 		<module>nlp4j-twitter4j</module>
 		<module>nlp4j-yahoojp</module>
+		<module>nlp4j-stanford</module>
 	</modules>
 </project>
