--- a/nlp4j/nlp4j-azure/pom.xml
+++ b/nlp4j/nlp4j-azure/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.0.0-SNAPSHOT</version>
+			<version>1.3.1.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
