--- a/nlp4j/nlp4j-stanford/pom.xml
+++ b/nlp4j/nlp4j-stanford/pom.xml
@@ -40,5 +40,12 @@
 			<classifier>models</classifier>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
