--- a/nlp4j/nlp4j-yahoojp/pom.xml
+++ b/nlp4j/nlp4j-yahoojp/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.0.0</version>
+			<version>[1.3.0.0,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
