--- a/nlp4j/nlp4j-kuromoji/pom.xml
+++ b/nlp4j/nlp4j-kuromoji/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.0.0</version>
+			<version>[1.3.0.0,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.atilika.kuromoji/kuromoji -->
 		<dependency>
