--- a/nlp4j/nlp4j-webcrawler/pom.xml
+++ b/nlp4j/nlp4j-webcrawler/pom.xml
@@ -15,14 +15,26 @@
 			<artifactId>nlp4j-core</artifactId>
 			<version>1.3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-test</artifactId>
+			<version>1.0.0.0</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
 	</dependencies>
 	<build>
-	
+
 	</build>
 </project>
