--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-wiki</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.1.0</version>
 	<description>module for Wikipedia, Wiktionary</description>
 	<dependencies>
 		<dependency>
