--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -64,6 +64,17 @@
 			<artifactId>nlp4j-core</artifactId>
 			<version>[1.3.2.0,)</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>[2.13.2,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>[2.13.2,)</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
