--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -1,16 +1,52 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!-- PARENT -->
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
 		<version>1.3.1.0</version>
 	</parent>
+	<!-- ARTIFACT ID -->
 	<artifactId>nlp4j-wiki</artifactId>
+	<!-- JAR -->
+	<packaging>jar</packaging>
+	<name>nlp4j-core</name>
+	<!-- 0.1.1.0 -->
 	<version>0.1.1.0</version>
 	<description>module for Wikipedia, Wiktionary</description>
+	<url>https://nlp4j.org/</url>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>oyahiroki</id>
+			<name>Hiroki Oya</name>
+			<email>oyahiroki@gmail.com</email>
+			<url>https://twitter.com/oyahiroki</url>
+			<roles>
+				<role>lead</role>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>-9</timezone>
+		</developer>
+	</developers>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<build>
 		<plugins>
+			<!-- COMPILER -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -135,12 +171,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-test</artifactId>
-			<version>[1.0.0.0,)</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
