--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>jar</packaging>
 	<name>nlp4j-core</name>
 	<!-- 0.1.1.0 -->
-	<version>0.1.1.0</version>
+	<version>0.2.0.0</version>
 	<description>module for Wikipedia, Wiktionary</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -115,7 +115,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.20</version>
+			<version>[1.21,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.sweble.wikitext/swc-parser-lazy -->
 		<dependency>
