--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -201,5 +201,6 @@
 		<module>nlp4j-test</module>
 		<module>nlp4j-wiki</module>
 		<module>nlp4j-examples</module>
+		<module>nlp4j-all</module>
 	</modules>
 </project>
