--- a/nlp4j/nlp4j-deeplearning/pom.xml
+++ b/nlp4j/nlp4j-deeplearning/pom.xml
@@ -10,6 +10,13 @@
 	<artifactId>nlp4j-deeplearning</artifactId>
 	<version>1.0.0.0.1-SNAPSHOT</version>
 	<name>deeplearning</name>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
