--- a/nlp4j/nlp4j-stanford/pom.xml
+++ b/nlp4j/nlp4j-stanford/pom.xml
@@ -8,6 +8,13 @@
 	</parent>
 	<version>1.3.1.1</version>
 	<artifactId>nlp4j-stanford</artifactId>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
