--- a/nlp4j/nlp4j-cabocha/pom.xml
+++ b/nlp4j/nlp4j-cabocha/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.2.1,)</version>
+			<version>1.3.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
