--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -203,5 +203,6 @@
 		<module>nlp4j-all</module>
     <module>nlp4j-web-api</module>
     <module>nlp4j-web-app</module>
-  </modules>
+    <module>nlp4j-wordnet</module>
+	</modules>
 </project>
