--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -204,5 +204,6 @@
     <module>nlp4j-web-api</module>
     <module>nlp4j-web-app</module>
     <module>nlp4j-wordnet</module>
+    <module>nlp4j-ibm</module>
 	</modules>
 </project>
