--- a/nlp4j/nlp4j-ibm/pom.xml
+++ b/nlp4j/nlp4j-ibm/pom.xml
@@ -1,10 +1,31 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.nlp4j</groupId>
-    <artifactId>nlp4j</artifactId>
-    <version>1.3.1.0</version>
-  </parent>
-  <artifactId>nlp4j-ibm</artifactId>
-  <version>1.0.0.0</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.nlp4j</groupId>
+		<artifactId>nlp4j</artifactId>
+		<version>1.3.1.0</version>
+	</parent>
+	<artifactId>nlp4j-ibm</artifactId>
+	<version>1.0.0.0</version>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.ibm.watson/discovery -->
+		<dependency>
+			<groupId>com.ibm.watson</groupId>
+			<artifactId>discovery</artifactId>
+			<version>9.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-core</artifactId>
+			<version>1.3.3.0</version>
+		</dependency>
+	</dependencies>
 </project>
