--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -104,10 +104,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<build>
 		<plugins>
+			<!-- COMPILER -->
+			<!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -121,7 +124,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-
 				<version>3.1.1</version>
 				<configuration>
 					<additionalparam>-Xdoclint:none</additionalparam>
@@ -134,7 +136,6 @@
 					<docencoding>UTF-8</docencoding>
 					<aggregate>true</aggregate>
 					<notimestamp>true</notimestamp>
-
 					<doctitle>${javadoc.title}</doctitle>
 					<windowtitle>${javadoc.title}</windowtitle>
 					<jarOutputDirectory>jar</jarOutputDirectory>
@@ -142,7 +143,6 @@
 					<links>
 						<link>https://docs.oracle.com/javase/jp/8/docs/api</link>
 					</links>
-
 					<groups>
 						<group>
 							<title>NLP4J</title>
@@ -161,19 +161,6 @@
 						<id>attach-sources</id>
 						<goals>
 							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
 						</goals>
 					</execution>
 				</executions>
