--- a/nlp4j/nlp4j-all/pom.xml
+++ b/nlp4j/nlp4j-all/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- PARENT -->
@@ -28,13 +29,13 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.2.1</version>
+			<version>1.3.4.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-kuromoji -->
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-kuromoji</artifactId>
-			<version>1.3.0.0</version>
+			<version>1.3.4.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-mecab -->
 		<dependency>
