--- a/nlp4j/nlp4j-azure/pom.xml
+++ b/nlp4j/nlp4j-azure/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.3.0.0</version>
+		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-azure</artifactId>
 	<version>1.0.0.0</version>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.1.0</version>
+			<version>[1.3.4.0,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
