--- a/nlp4j/nlp4j-ibm/pom.xml
+++ b/nlp4j/nlp4j-ibm/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.3.0</version>
+			<version>[1.3.4.0,)</version>
 		</dependency>
 	</dependencies>
 </project>
