--- a/nlp4j/nlp4j-twitter4j/pom.xml
+++ b/nlp4j/nlp4j-twitter4j/pom.xml
@@ -1,13 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
 		<artifactId>nlp4j</artifactId>
-		<version>1.3.0.0</version>
+		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-twtr</artifactId>
-	<version>1.1.0.0</version>
+	<version>1.3.4.0</version>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
@@ -16,10 +17,10 @@
 		</license>
 	</licenses>
 	<properties>
-		<!-- 変数 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- 変数 -->
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<build>
 		<plugins>
@@ -38,13 +39,15 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.1.1,)</version>
+			<version>[1.3.4.0,)</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core -->
 		<dependency>
 			<groupId>org.twitter4j</groupId>
 			<artifactId>twitter4j-core</artifactId>
-			<version>[4.0,)</version>
+			<version>4.0.7</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
