--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -14,7 +14,7 @@
 	<packaging>jar</packaging>
 	<name>nlp4j-wiki</name>
 	<!-- VERSION -->
-	<version>0.2.0.2</version>
+	<version>0.2.0.3</version>
 	<description>NLP4J for Wikipedia / Wiktionary</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -25,10 +25,11 @@
 		</license>
 	</licenses>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-core -->
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.3.0</version>
+			<version>[1.3.4.0,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
 		<dependency>
