--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -52,11 +52,11 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.sweble.wikitext/swc-example-basic -->
 		<!-- 3.1.9 : Sep 26, 2018 -->
-		<!-- dependency -->
-			<!-- groupId>org.sweble.wikitext</groupId -->
-			<!-- artifactId>swc-example-basic</artifactId -->
-			<!-- version>3.1.9</version -->
-		<!-- /dependency -->
+		<dependency>
+			<groupId>org.sweble.wikitext</groupId>
+			<artifactId>swc-example-basic</artifactId>
+			<version>3.1.9</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/info.bliki.wiki/bliki-core -->
 		<!-- 3.1.0 : Mar 10, 2016 -->
 		<dependency>
