--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -211,11 +211,11 @@
 	</build>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
-		<dependency>
-			<groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp</artifactId>
-			<version>3.14.9</version>
-		</dependency>
+		<!-- dependency -->
+			<!-- groupId>com.squareup.okhttp3</groupId -->
+			<!-- artifactId>okhttp</artifactId -->
+			<!-- version>3.14.9</version -->
+		<!-- / dependency -->
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
