--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -195,6 +195,7 @@
 		<module>nlp4j-yahoojp</module>
 		<module>nlp4j-stanford</module>
 		<module>nlp4j-solr</module>
+		<module>nlp4j-solr9</module>
 		<module>nlp4j-word2vec</module>
 		<module>nlp4j-mecab</module>
 		<module>nlp4j-ginza</module>
