--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -227,11 +227,11 @@
 			<version>5.2.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.squareup.okio/okio -->
-		<dependency>
-			<groupId>com.squareup.okio</groupId>
-			<artifactId>okio</artifactId>
-			<version>2.2.2</version>
-		</dependency>
+		<!-- dependency -->
+			<!-- groupId>com.squareup.okio</groupId -->
+			<!-- artifactId>okio</artifactId -->
+			<!-- version>2.2.2</version -->
+		<!-- /dependency -->
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
