--- a/nlp4j/nlp4j-examples/pom.xml
+++ b/nlp4j/nlp4j-examples/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
@@ -10,7 +12,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.5.0,)</version>
+			<version>[1.3.7.10,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
@@ -27,14 +29,16 @@
 			<artifactId>nlp4j-stanford</artifactId>
 			<version>1.3.5.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
+		<!--
+		https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
 			<artifactId>stanford-corenlp</artifactId>
 			<version>4.4.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
+		<!--
+		https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
 			<artifactId>stanford-corenlp</artifactId>
@@ -58,7 +62,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-wiki</artifactId>
-			<version>0.2.0.3</version>
+			<version>1.1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
