--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- PARENT -->
 	<parent>
@@ -14,7 +16,7 @@
 	<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-wiki -->
 	<!-- VERSION -->
 	<!-- 0.3.1.0 : Sep 04, 2022 -->
-	<version>0.3.2.1</version>
+	<version>1.1.0.0</version>
 	<description>NLP4J for Wikipedia / Wiktionary</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -24,6 +26,75 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<profiles>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<!-- for release -->
+			<!-- mvn -DperformRelease=true deploy -->
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<!--
+					https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
+					<!-- sonatype release -->
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<!-- version>1.6.8</version --><!--
+						Feb 13, 2017 -->
+						<version>1.6.13</version><!-- Apr 21, 2022 -->
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<!-- gpg sign -->
+					<!-- https://maven.apache.org/plugins/maven-gpg-plugin/ -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- javadoc -->
+					<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/ -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.1.1</version>
+						<configuration>
+							<author>true</author>
+							<source>1.8</source>
+							<encoding>UTF-8</encoding>
+							<charset>UTF-8</charset>
+							<docencoding>UTF-8</docencoding>
+							<additionalparam>-Xdoclint:none</additionalparam>
+							<additionalOptions>-Xdoclint:none</additionalOptions>
+							<additionalJOption>-Xdoclint:none</additionalJOption>
+							<additionalJOption>-Xdoclint:all</additionalJOption>
+							<additionalJOption>-Xdoclint:-missing</additionalJOption>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -46,7 +117,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.9</version>
+			<version>1.3.7.10</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-webcrawler -->
 		<dependency>
@@ -54,21 +125,24 @@
 			<artifactId>nlp4j-webcrawler</artifactId>
 			<version>1.1.1.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
 		<!-- 1.22 : Oct 31, 2022 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>[1.22,)</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.sweble.wikitext/swc-parser-lazy -->
+		<!--
+		https://mvnrepository.com/artifact/org.sweble.wikitext/swc-parser-lazy -->
 		<!-- 3.1.9 : Sep 26, 2018 -->
 		<dependency>
 			<groupId>org.sweble.wikitext</groupId>
 			<artifactId>swc-parser-lazy</artifactId>
 			<version>3.1.9</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.sweble.wikitext/swc-example-basic -->
+		<!--
+		https://mvnrepository.com/artifact/org.sweble.wikitext/swc-example-basic -->
 		<!-- 3.1.9 : Sep 26, 2018 -->
 		<dependency>
 			<groupId>org.sweble.wikitext</groupId>
@@ -91,7 +165,8 @@
 			<version>[1.15.3,)</version>
 		</dependency>
 		<!-- for_jaxb -->
-		<!-- https://mvnrepository.com/artifact/javax.activation/javax.activation-api -->
+		<!--
+		https://mvnrepository.com/artifact/javax.activation/javax.activation-api -->
 		<!-- https://github.com/acroquest/javabook-support/issues/49 -->
 		<!-- 1.2.0 : Sep 06, 2017 -->
 		<dependency>
