--- a/nlp4j/nlp4j-web-app/src/main/webapp/WEB-INF/web.xml
+++ b/nlp4j/nlp4j-web-app/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,19 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+  <display-name>hello-web</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>HelloServlet3</display-name>
+    <servlet-name>HelloServlet3</servlet-name>
+    <servlet-class>nlp4j.servlet.HelloServlet3</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HelloServlet3</servlet-name>
+    <url-pattern>/helloservlet3</url-pattern>
+  </servlet-mapping>
 </web-app>
