--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ nlp4j/nlp4j-word2vec/.classpath
 nlp4j/nlp4j-word2vec/.project
 nlp4j/nlp4j-word2vec/.classpath
 nlp4j/nlp4j-word2vec/.project
+nlp4j/nlp4j-mecab/.classpath
