--- a/nlp4j/nlp4j-web-rag/pom.xml
+++ b/nlp4j/nlp4j-web-rag/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>nlp4j-solr</artifactId>
 			<version>0.9.6.1a</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-openai</artifactId>
+			<version>0.1.0.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
